--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,8 @@
     "implicit-arrow-linebreak": 0,
     "function-paren-newline": 0,
     "import/no-extraneous-dependencies": 0,
-    "no-console": 0
+    "no-console": 0,
+    "linebreak-style": 0,
+    "object-curly-newline": 0
   }
 }
