--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     "import/no-extraneous-dependencies": 0,
     "no-console": 0,
     "linebreak-style": 0,
-    "object-curly-newline": 0
+    "object-curly-newline": 0,
+    "no-restricted-syntax": 0
   }
 }
