--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "no-console": 0,
     "linebreak-style": 0,
     "object-curly-newline": 0,
-    "no-restricted-syntax": 0
+    "no-restricted-syntax": 0,
+    "indent": 0
   }
 }
