--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "linebreak-style": 0,
     "object-curly-newline": 0,
     "no-restricted-syntax": 0,
-    "indent": 0
+    "indent": 0,
+    "no-plusplus": 0
   }
 }
